Changes towards version 0.7:
- Fixed a problem with blue ships after Avatar's tractor beam,
  along with some other fill-stamp situations; bug #929 - Alex
- Added TFB_Canvas_Lock(), TFB_Canvas_Unlock() and TFB_Canvas_GetStride()
  - SvdB
- Scaling images with respect to their hotspots: stabilizes compound
  Melee objects; re-added bilinear Melee scaler; zooming planet uses
  bilinear; fixes bug #685 - Alex
- Added --keepaspectratio to keep correct aspect ratio when using
  custom resolutions in OpenGL mode - Mika
- Add /var/tmp as possible location for temporary files. Don't try
  /tmp and /var/tmp at all on MS Windows (Cygwin excepted) - SvdB
- Added fullscreen/windowed toggle key F11 (bug #578) - Mika
- Allow building without ogg vorbis support (bug #852) - SvdB
- Reworked SuperMelee fleet loading (fixes bug #823) - SvdB
- Fixed enemy ships getting recrewed between ecnounters in HyperSpace
  (bug #996) - Alex
- Removed mouse_err.c since DoPopupWindow() is used now - SvdB
- (debugging) Fixed instant-move towards the current location - SvdB
- Fixed wrong Sa-Matra guards icons after Kohr-Ah win (bug #1001) - Alex
- Internal ship structures and queues refactoring and cleanup - Alex
- Fix quitting out of IP before the IP is fully set (bug #987) - Michael
- Fixed speech looping with long tracks at high sampling rates;
  scope supports higher rates for speech now; bug 999 - Alex
- Basic support for .ani-based shipspin animations - Michael
- Fixed some Melnorme history info timestamps - Alex
- Fixed Ur-Quan story timestamps, from Vlad-Ceru Opran
- Removed the 256-frame limit on .ani files - Michael
- Renamed PlaySpeeh/StopSpeech to work around name collisions
  on OSX - Alex
- Ending the battle with a simultaneous death no longer triggers an
  assertion - SvdB
- Concurrent supermelee ship selection - SvdB
- New generic, unthreaded flashing code - SvdB
- Cleanup of 3DO ship spin support; spin speech works now - Alex